[package]
name = "ash_raytracing"
version = "0.1.0"
edition = "2021"
authors = ["zhanzhan1848 <270428890@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit     = "0.20.0"
ash       = "0.29.0"
num       = "0.2"
cgmath    = "0.17.0"
image     = "0.22"
memoffset = "0.5.1"
tobj      = "0.1.10"
async-std = { version = "1.12.0", features = ["unstable"] }
rand      = { version = "0.8.5", features = [] }

[dependencies.bitflags]
version = ">= 1.0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }